--- a/src/styles/TaskItem.css
+++ b/src/styles/TaskItem.css
@@ -74,3 +74,8 @@ ul li:nth-child(4n + 9) {
   cursor: pointer;
   font-size: 20px;
 }
+@media only screen and (max-width: 420px) {
+  ul {
+    width: 100%;
+  }
+}
